# RT

./: .gitignore  CMakeLists.txt  Makefile  README.md  author
find_sdl2/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
includes/: get_next_line.h  main.h  rt.h
libparson/: Makefile
libraries/libft/: .gitignore  Makefile  ft_atod.c  ft_atoi.c  ft_atol_base.c  ft_begin_trim.c  ft_count_words.c  ft_free_arr.c  ft_get_processors_num.c  ft_i_atoi.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_lstnew.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_num_width.c  ft_pow.c  ft_putchar.c  ft_putchar_fd.c  ft_q_rsqrt.c  ft_skip_white_spases.c  ft_strcpy.c  ft_strdup.c  ft_strequ.c  ft_striteri.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strncpy.c  ft_strnequ.c  ft_strstr.c  ft_strsub.c  ft_swap_double.c  (+4 more)
libraries/libparson/: Makefile
resources/scenes/: mememe.json  mouse  mouse.json  room.json  scene3  scene3.json
scenes/: best_scene  column  column.json  column2.json  coub_reflections  mememe  mememe.json  mouse  mouse.json  no_finish  planets  planets.json  planets_cng_light  room  room.json  scene1  scene2  scene3  scene3.json  scene4  scene_to_json  test3
scennes/: test1  test2  test3  test4
sources/: cam_move_key_down.c  cam_move_key_up.c  cam_rotate_key_down.c  cam_rotate_key_up.c  color.c  double_with_vect3.c  draw.c  effects.c  float_with_vect3.c  frenel.c  get_next_line.c  init.c  interface.c  interface_info.c  intersection_base_obj.c  json_get_obj.c  json_get_value.c  json_parson.c  key_down_cam_move.c  key_down_cam_rotate.c  key_mouse.c  key_move.c  key_reset.c  key_up_cam_move.c  key_up_cam_rotate.c  key_utils.c  keys.c  keys_mouse.c  ligths.c  main.c  normal_base_obj.c  obj_intersection_base.c  obj_intersection_bonus.c  obj_normal_base.c  obj_normal_bonus.c  obj_texture.c  obj_utils.c  parse_utils.c  parsing.c  parsing_caps.c  (+22 more)
